# python-polylith

./: devbox.json  pyproject.toml
.devcontainer/: devcontainer.json
bases/polylith/cli/: create.py
components/polylith/dirs/: dirs.py
components/polylith/imports/: grouping.py
components/polylith/workspace/: build_backend_factory.py  build_backends.py  create.py  package_manager_factory.py  package_managers.py  pyproject_manager.py
projects/poetry_polylith_plugin/: pyproject.toml
projects/polylith_cli/: pyproject.toml
test/: conftest.py
test/bases/polylith/cli/: test_cli.py
test/components/polylith/imports/: test_grouping.py
test/components/polylith/workspace/: test_backend_config.py  test_interactive_prompting.py  test_workspace.py
test/integration/: test_workspace_setup_scenarios.py
